--- a/themes/cafe/_config.yml
+++ b/themes/cafe/_config.yml
@@ -6,7 +6,7 @@ menu:
   archives: /archives
   tags: /tags
   #commonweal: /404.html
-rss: /atom.xml
+rss: /rss2.xml
 
 # footer底部显示联系邮箱（在博客配置文件下添加email配置也是一样的效果）
 email: '1315592944@qq.com'
